Created Swagger documentation for User Tag
